// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Link /> correctly onPressIn/onPressOut link styles look as expected 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    style={
      Array [
        Array [
          Object {
            "alignSelf": "flex-start",
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-link"
  >
    <Text
      _isUnderlined={true}
      _letterSpacing="small"
      align="left"
      color="primary.600"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(123, 178, 242, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textAlign": "left",
            "textDecorationLine": "underline",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      Displaying some link
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Renders <Link /> correctly onPressIn/onPressOut link styles look as expected 2`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    style={
      Array [
        Array [
          Object {
            "alignSelf": "flex-start",
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-link"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      align="left"
      color="primary.800"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(43, 131, 234, 1.0 )",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      Displaying some link
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Renders <Link /> correctly snapshot testing 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    style={
      Array [
        Array [
          Object {
            "alignSelf": "flex-start",
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-link"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      align="left"
      color="primary.800"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(43, 131, 234, 1.0 )",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      Displaying some link
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Renders <Link /> correctly snapshot testing, renders bold link 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    style={
      Array [
        Array [
          Object {
            "alignSelf": "flex-start",
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-link"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      align="left"
      color="primary.800"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(43, 131, 234, 1.0 )",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      Displaying some link
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Renders <Link /> correctly snapshot testing, renders large link 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    style={
      Array [
        Array [
          Object {
            "alignSelf": "flex-start",
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-link"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      align="left"
      color="primary.800"
      size="large"
      style={
        Array [
          Object {
            "color": "rgba(43, 131, 234, 1.0 )",
            "fontFamily": "Lato-Bold",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      Displaying some link
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Renders <Link /> correctly snapshot testing, renders light link 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    style={
      Array [
        Array [
          Object {
            "alignSelf": "flex-start",
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-link"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      align="left"
      color="primary.800"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(43, 131, 234, 1.0 )",
            "fontFamily": "Lato-Light",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="light"
    >
      Displaying some link
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Renders <Link /> correctly snapshot testing, renders medium link 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    style={
      Array [
        Array [
          Object {
            "alignSelf": "flex-start",
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-link"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      align="left"
      color="primary.800"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(43, 131, 234, 1.0 )",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      Displaying some link
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Renders <Link /> correctly snapshot testing, renders regular link 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    style={
      Array [
        Array [
          Object {
            "alignSelf": "flex-start",
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-link"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      align="left"
      color="primary.800"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(43, 131, 234, 1.0 )",
            "fontFamily": "Lato-Regular",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="regular"
    >
      Displaying some link
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Renders <Link /> correctly snapshot testing, renders small link 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    style={
      Array [
        Array [
          Object {
            "alignSelf": "flex-start",
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-link"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      align="left"
      color="primary.800"
      size="small"
      style={
        Array [
          Object {
            "color": "rgba(43, 131, 234, 1.0 )",
            "fontFamily": "Lato-Bold",
            "fontSize": 13,
            "letterSpacing": 0,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      Displaying some link
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Renders <Link /> correctly snapshot testing, renders visited link 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    style={
      Array [
        Array [
          Object {
            "alignSelf": "flex-start",
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-link"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      align="left"
      color="primary.800"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(43, 131, 234, 1.0 )",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      Displaying some link
    </Text>
  </TouchableOpacity>
</View>
`;
